--- a/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
+++ b/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
@@ -31,37 +31,40 @@
                         <constraint firstAttribute="width" constant="60" id="vde-Xp-8gM"/>
                     </constraints>
                 </view>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAZ-zb-oEv">
-                    <rect key="frame" x="189" y="106" width="11.5" height="62"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                    <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hf-kZ-XQC">
-                    <rect key="frame" x="119" y="117" width="40" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="eex-0F-eUX"/>
-                        <constraint firstAttribute="width" constant="40" id="xtH-5d-Fq6"/>
-                    </constraints>
-                    <state key="normal" image="minusbtn">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJr-al-8Em">
-                    <rect key="frame" x="230.5" y="117" width="40" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="5kM-a2-r41"/>
-                        <constraint firstAttribute="width" constant="40" id="dFU-hM-j4y"/>
-                    </constraints>
-                    <state key="normal" image="plusbt">
-                        <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    </state>
-                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-m7-E9W">
+                    <rect key="frame" x="141" y="74" width="107.5" height="110"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hf-kZ-XQC">
+                            <rect key="frame" x="0.0" y="0.0" width="18" height="110"/>
+                            <state key="normal" image="minus" catalog="system">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="tapMinus:" destination="-1" eventType="touchUpInside" id="snP-Vz-gnq"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAZ-zb-oEv">
+                            <rect key="frame" x="48" y="0.0" width="11.5" height="110"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJr-al-8Em">
+                            <rect key="frame" x="89.5" y="0.0" width="18" height="110"/>
+                            <state key="normal" image="plus" catalog="system">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="tapPlus:" destination="-1" eventType="touchUpInside" id="C8R-kf-txS"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                </stackView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f6L-CR-shk">
                     <rect key="frame" x="74.5" y="214" width="240" height="40"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPg-K7-ZzQ">
-                            <rect key="frame" x="96.5" y="4" width="47" height="32"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="変更" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RPg-K7-ZzQ">
+                            <rect key="frame" x="93.5" y="4.5" width="53" height="31.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="26"/>
                             <color key="textColor" red="0.97647058959999999" green="0.97647058959999999" blue="0.97647058959999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <nil key="highlightedColor"/>
@@ -79,25 +82,21 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="f6L-CR-shk" firstAttribute="top" secondItem="1Y7-m7-E9W" secondAttribute="bottom" constant="30" id="1fw-cV-55d"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="f6L-CR-shk" secondAttribute="bottom" constant="20" id="2cP-L3-UyP"/>
-                <constraint firstItem="XAZ-zb-oEv" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4fT-81-WjG"/>
-                <constraint firstItem="PJr-al-8Em" firstAttribute="leading" secondItem="XAZ-zb-oEv" secondAttribute="trailing" constant="30" id="Hyn-YU-DVk"/>
                 <constraint firstItem="f6L-CR-shk" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Ojn-38-dbh"/>
                 <constraint firstItem="MtJ-J4-BUV" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="QsF-I5-RfW"/>
+                <constraint firstItem="1Y7-m7-E9W" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="30" id="Xz6-QH-zN4"/>
                 <constraint firstItem="MtJ-J4-BUV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Zxe-aG-SCi"/>
-                <constraint firstItem="9Hf-kZ-XQC" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="hcS-zI-6Nc"/>
-                <constraint firstItem="f6L-CR-shk" firstAttribute="top" secondItem="XAZ-zb-oEv" secondAttribute="bottom" constant="46" id="svz-PW-Ch8"/>
-                <constraint firstItem="PJr-al-8Em" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="vXv-tw-dJE"/>
-                <constraint firstItem="XAZ-zb-oEv" firstAttribute="leading" secondItem="9Hf-kZ-XQC" secondAttribute="trailing" constant="30" id="yyw-OV-27F"/>
-                <constraint firstItem="XAZ-zb-oEv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="zVT-DD-pW5"/>
+                <constraint firstItem="1Y7-m7-E9W" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="mjZ-37-RV5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="119.56521739130436" y="253.79464285714283"/>
         </view>
     </objects>
     <resources>
-        <image name="minusbtn" width="40" height="40"/>
-        <image name="plusbt" width="40" height="40"/>
+        <image name="minus" catalog="system" width="128" height="24"/>
+        <image name="plus" catalog="system" width="128" height="113"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
