--- a/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
+++ b/Sales Tracker/Presentation/Edit Quantity/View/EditQuantityView.xib
@@ -32,7 +32,7 @@
                     </constraints>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="1Y7-m7-E9W">
-                    <rect key="frame" x="141" y="74" width="107.5" height="110"/>
+                    <rect key="frame" x="139.5" y="74" width="110" height="110"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Hf-kZ-XQC">
                             <rect key="frame" x="0.0" y="0.0" width="18" height="110"/>
@@ -44,13 +44,13 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XAZ-zb-oEv">
-                            <rect key="frame" x="48" y="0.0" width="11.5" height="110"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                            <rect key="frame" x="48" y="0.0" width="14" height="110"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
                             <color key="textColor" red="0.30196078430000001" green="0.30196078430000001" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PJr-al-8Em">
-                            <rect key="frame" x="89.5" y="0.0" width="18" height="110"/>
+                            <rect key="frame" x="92" y="0.0" width="18" height="110"/>
                             <state key="normal" image="plus" catalog="system">
                                 <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </state>
