--- a/Sales Tracker/Presentation/Product Index/View/ProductIndexView.xib
+++ b/Sales Tracker/Presentation/Product Index/View/ProductIndexView.xib
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,13 +24,13 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ブランド名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGz-yR-Dfo">
-                    <rect key="frame" x="15" y="64" width="264" height="30"/>
-                    <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="25"/>
-                    <color key="textColor" red="0.21176470589999999" green="0.21176470589999999" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <rect key="frame" x="15" y="64" width="264" height="32.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="27"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jWt-ee-cfJ">
-                    <rect key="frame" x="299" y="59" width="100" height="40"/>
+                    <rect key="frame" x="299" y="60.5" width="100" height="40"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WLx-LY-ipv">
                             <rect key="frame" x="12.5" y="7.5" width="75" height="25"/>
@@ -42,11 +41,12 @@
                                         <constraint firstAttribute="width" constant="65" id="vsw-DA-dVP"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
-                                    <nil key="textColor"/>
+                                    <color key="textColor" red="0.38039215686274508" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="KNd-Re-s9r">
                                     <rect key="frame" x="65" y="5" width="10" height="15.5"/>
+                                    <color key="tintColor" red="0.3803921938" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="25" id="FnT-1W-lHj"/>
                                         <constraint firstAttribute="width" constant="10" id="UCs-bn-Vkf"/>
@@ -55,7 +55,7 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" red="0.93333339689999995" green="0.97254908080000002" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstItem="WLx-LY-ipv" firstAttribute="centerX" secondItem="jWt-ee-cfJ" secondAttribute="centerX" id="5a1-VD-ps4"/>
                         <constraint firstAttribute="height" constant="40" id="Zx5-da-gAb"/>
@@ -64,8 +64,8 @@
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JIZ-Wi-hvl">
-                    <rect key="frame" x="0.0" y="119" width="414" height="743"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <rect key="frame" x="0.0" y="120.5" width="414" height="741.5"/>
+                    <color key="backgroundColor" red="0.97254908080000002" green="0.97647058959999999" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="9Pd-8t-ske">
                         <size key="itemSize" width="128" height="128"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -75,7 +75,7 @@
                     <cells/>
                 </collectionView>
                 <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="53X-2z-Ne3">
-                    <rect key="frame" x="0.0" y="119" width="414" height="743"/>
+                    <rect key="frame" x="0.0" y="120.5" width="414" height="741.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="hello hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NR-sZ-XQ3">
                             <rect key="frame" x="186" y="361" width="77" height="21"/>
@@ -89,7 +89,7 @@
                 </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="TzH-yR-Gsi"/>
-            <color key="backgroundColor" systemColor="systemTealColor"/>
+            <color key="backgroundColor" red="0.3803921938" green="0.69803923369999998" blue="0.54901963470000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="TzH-yR-Gsi" firstAttribute="trailing" secondItem="jWt-ee-cfJ" secondAttribute="trailing" constant="15" id="Fd9-T3-PKj"/>
                 <constraint firstItem="jWt-ee-cfJ" firstAttribute="centerY" secondItem="hGz-yR-Dfo" secondAttribute="centerY" id="HYC-0o-pCk"/>
@@ -110,11 +110,5 @@
     </objects>
     <resources>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
