--- a/Sales Tracker/Presentation/Product Index/View/ProductIndexView.xib
+++ b/Sales Tracker/Presentation/Product Index/View/ProductIndexView.xib
@@ -24,14 +24,14 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ブランド名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGz-yR-Dfo">
-                    <rect key="frame" x="70" y="64" width="209" height="32.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGz-yR-Dfo">
+                    <rect key="frame" x="70" y="64" width="209" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="27"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jWt-ee-cfJ">
-                    <rect key="frame" x="299" y="60.5" width="100" height="40"/>
+                    <rect key="frame" x="299" y="44" width="100" height="40"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WLx-LY-ipv">
                             <rect key="frame" x="12.5" y="7.5" width="75" height="25"/>
@@ -65,7 +65,7 @@
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="JIZ-Wi-hvl">
-                    <rect key="frame" x="0.0" y="120.5" width="414" height="741.5"/>
+                    <rect key="frame" x="0.0" y="104" width="414" height="758"/>
                     <color key="backgroundColor" red="0.97254908080000002" green="0.97647058959999999" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="9Pd-8t-ske">
                         <size key="itemSize" width="128" height="128"/>
@@ -76,7 +76,7 @@
                     <cells/>
                 </collectionView>
                 <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="53X-2z-Ne3">
-                    <rect key="frame" x="0.0" y="120.5" width="414" height="741.5"/>
+                    <rect key="frame" x="0.0" y="104" width="414" height="758"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="hello hello" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8NR-sZ-XQ3">
                             <rect key="frame" x="186" y="361" width="77" height="21"/>
@@ -88,8 +88,8 @@
                     </subviews>
                     <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="square.and.arrow.up.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="wKP-tc-17e">
-                    <rect key="frame" x="15" y="58" width="40" height="41"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wKP-tc-17e">
+                    <rect key="frame" x="15" y="59" width="40" height="40"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="7fM-o6-A9E"/>
                         <constraint firstAttribute="width" constant="40" id="kVd-dR-fYB"/>
@@ -120,6 +120,5 @@
     </objects>
     <resources>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
-        <image name="square.and.arrow.up.fill" catalog="system" width="115" height="128"/>
     </resources>
 </document>
