💄Fixed UI constraints for ProductSelectView, ProductIndexCollectionCell, and SalesHitoryTableViewCell.

--- a/Sales Tracker/Presentation/Product Index/Cells/ProductIndexCollectionViewCell.xib
+++ b/Sales Tracker/Presentation/Product Index/Cells/ProductIndexCollectionViewCell.xib
@@ -25,20 +25,20 @@
                         <rect key="frame" x="10" y="10" width="134" height="224"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="questionmark.folder.fill.ar" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="uhc-xK-ydV">
-                                <rect key="frame" x="0.0" y="1" width="134" height="131.5"/>
+                                <rect key="frame" x="5" y="6" width="124" height="121.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="uhc-xK-ydV" secondAttribute="height" multiplier="11:11" id="CXz-jF-zMk"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="JGv-wk-zsK">
-                                <rect key="frame" x="6" y="138" width="122" height="44"/>
+                                <rect key="frame" x="6" y="134" width="122" height="41"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="選択" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P5M-J9-Q4e">
-                                <rect key="frame" x="6" y="184" width="122" height="23"/>
+                                <rect key="frame" x="6" y="177" width="122" height="23"/>
                                 <color key="backgroundColor" red="0.36470589040000001" green="0.67058825489999996" blue="0.52549022440000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
                                 <color key="textColor" red="0.93333339689999995" green="0.97254908080000002" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -48,14 +48,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="P5M-J9-Q4e" firstAttribute="leading" secondItem="XYT-QL-5kD" secondAttribute="leading" constant="6" id="3yJ-ko-aed"/>
-                            <constraint firstItem="uhc-xK-ydV" firstAttribute="leading" secondItem="XYT-QL-5kD" secondAttribute="leading" id="BfC-aH-hv9"/>
+                            <constraint firstItem="uhc-xK-ydV" firstAttribute="leading" secondItem="XYT-QL-5kD" secondAttribute="leading" constant="5" id="BfC-aH-hv9"/>
                             <constraint firstAttribute="trailing" secondItem="JGv-wk-zsK" secondAttribute="trailing" constant="6" id="GO0-g3-7q7"/>
                             <constraint firstItem="JGv-wk-zsK" firstAttribute="leading" secondItem="XYT-QL-5kD" secondAttribute="leading" constant="6" id="Jni-Fu-kd4"/>
-                            <constraint firstItem="uhc-xK-ydV" firstAttribute="top" secondItem="XYT-QL-5kD" secondAttribute="top" id="Qqg-yc-2W3"/>
+                            <constraint firstItem="uhc-xK-ydV" firstAttribute="top" secondItem="XYT-QL-5kD" secondAttribute="top" constant="5" id="Qqg-yc-2W3"/>
                             <constraint firstAttribute="trailing" secondItem="P5M-J9-Q4e" secondAttribute="trailing" constant="6" id="ZEI-El-gVm"/>
-                            <constraint firstAttribute="trailing" secondItem="uhc-xK-ydV" secondAttribute="trailing" id="bps-o1-e7J"/>
+                            <constraint firstAttribute="trailing" secondItem="uhc-xK-ydV" secondAttribute="trailing" constant="5" id="bps-o1-e7J"/>
                             <constraint firstItem="JGv-wk-zsK" firstAttribute="bottom" secondItem="P5M-J9-Q4e" secondAttribute="top" constant="-2" id="pxp-6T-pMP"/>
-                            <constraint firstItem="JGv-wk-zsK" firstAttribute="top" secondItem="uhc-xK-ydV" secondAttribute="bottom" constant="4" id="wAN-NQ-hmL"/>
+                            <constraint firstItem="JGv-wk-zsK" firstAttribute="top" secondItem="uhc-xK-ydV" secondAttribute="bottom" constant="5" id="wAN-NQ-hmL"/>
                             <constraint firstItem="JGv-wk-zsK" firstAttribute="height" secondItem="uhc-xK-ydV" secondAttribute="height" multiplier="0.33" id="zAh-9w-Usk"/>
                         </constraints>
                     </view>
