--- a/Sales Tracker/Presentation/Product Select/View/ProductSelectView.xib
+++ b/Sales Tracker/Presentation/Product Select/View/ProductSelectView.xib
@@ -55,7 +55,7 @@
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jWb-EB-CPf">
-                    <rect key="frame" x="16" y="60" width="370" height="224"/>
+                    <rect key="frame" x="16" y="59" width="370" height="225"/>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
@@ -69,7 +69,7 @@
                 <constraint firstItem="iOE-CV-sg8" firstAttribute="top" secondItem="Kef-oV-FOJ" secondAttribute="bottom" constant="20" id="bHe-gf-dWm"/>
                 <constraint firstItem="Kef-oV-FOJ" firstAttribute="top" secondItem="jWb-EB-CPf" secondAttribute="bottom" constant="16" id="gey-Pl-Ax8"/>
                 <constraint firstItem="9CY-KY-oTv" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="i4V-E2-Mqs"/>
-                <constraint firstItem="jWb-EB-CPf" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="16" id="iY2-UN-uPj"/>
+                <constraint firstItem="jWb-EB-CPf" firstAttribute="top" secondItem="9CY-KY-oTv" secondAttribute="bottom" constant="40" id="iY2-UN-uPj"/>
                 <constraint firstItem="jWb-EB-CPf" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="jDK-CW-paU"/>
                 <constraint firstItem="iOE-CV-sg8" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="o9s-jG-z80"/>
             </constraints>
