--- a/Sales Tracker/Presentation/Sales History/Cells/SalesHistoryTableViewCell.xib
+++ b/Sales Tracker/Presentation/Sales History/Cells/SalesHistoryTableViewCell.xib
@@ -25,40 +25,40 @@
                         <rect key="frame" x="15" y="10" width="290" height="90"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pencil.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="WhS-1p-zsv">
-                                <rect key="frame" x="0.0" y="0.5" width="100" height="89"/>
+                                <rect key="frame" x="5" y="5.5" width="100" height="79"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="A8M-VR-Qxj"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="6YW-Sg-7T6">
-                                <rect key="frame" x="110" y="0.0" width="170" height="90.5"/>
+                                <rect key="frame" x="115" y="5" width="165" height="90.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Brand" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fEr-K4-pwR">
-                                        <rect key="frame" x="0.0" y="0.0" width="170" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="165" height="14.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Product Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lqw-qO-wRE">
-                                        <rect key="frame" x="0.0" y="17.5" width="170" height="20.5"/>
+                                        <rect key="frame" x="0.0" y="17.5" width="165" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Color" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSP-JF-amr">
-                                        <rect key="frame" x="0.0" y="41" width="170" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="41" width="165" height="14.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rY3-3R-oBn">
-                                        <rect key="frame" x="0.0" y="58.5" width="170" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="58.5" width="165" height="14.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Quantity" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8r4-Sj-Vpg">
-                                        <rect key="frame" x="0.0" y="76" width="170" height="14.5"/>
+                                        <rect key="frame" x="0.0" y="76" width="165" height="14.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -68,12 +68,12 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6YW-Sg-7T6" firstAttribute="centerY" secondItem="WhS-1p-zsv" secondAttribute="centerY" id="Jn1-a2-YXK"/>
-                            <constraint firstItem="WhS-1p-zsv" firstAttribute="top" secondItem="9R9-EG-dTN" secondAttribute="top" id="Lzj-nl-kQ8"/>
+                            <constraint firstItem="6YW-Sg-7T6" firstAttribute="centerY" secondItem="WhS-1p-zsv" secondAttribute="centerY" constant="5" id="Jn1-a2-YXK"/>
+                            <constraint firstItem="WhS-1p-zsv" firstAttribute="top" secondItem="9R9-EG-dTN" secondAttribute="top" constant="5" id="Lzj-nl-kQ8"/>
                             <constraint firstItem="6YW-Sg-7T6" firstAttribute="leading" secondItem="WhS-1p-zsv" secondAttribute="trailing" constant="10" id="O8q-i7-Iea"/>
                             <constraint firstAttribute="trailing" secondItem="6YW-Sg-7T6" secondAttribute="trailing" constant="10" id="RFL-8T-L0w"/>
-                            <constraint firstAttribute="bottom" secondItem="WhS-1p-zsv" secondAttribute="bottom" id="cyu-Pj-3Cb"/>
-                            <constraint firstItem="WhS-1p-zsv" firstAttribute="leading" secondItem="9R9-EG-dTN" secondAttribute="leading" id="tVP-dE-f7y"/>
+                            <constraint firstAttribute="bottom" secondItem="WhS-1p-zsv" secondAttribute="bottom" constant="5" id="cyu-Pj-3Cb"/>
+                            <constraint firstItem="WhS-1p-zsv" firstAttribute="leading" secondItem="9R9-EG-dTN" secondAttribute="leading" constant="5" id="tVP-dE-f7y"/>
                         </constraints>
                     </view>
                 </subviews>
